Upper part of the letter

--- a/src/layouts/main.html
+++ b/src/layouts/main.html
@@ -12,6 +12,16 @@
       name="format-detection"
       content="telephone=no, date=no, address=no, email=no"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
     <!--[if mso]>
       <noscript>
         <xml>
@@ -34,7 +44,7 @@
         h4,
         h5,
         h6 {
-          font-family: "Segoe UI", sans-serif;
+          font-family: 'Segoe UI', sans-serif;
           mso-line-height-rule: exactly;
         }
       </style>
