--- a/src/components/secret.html
+++ b/src/components/secret.html
@@ -1,23 +1,12 @@
 <tr>
   <td class="p-16">
     <div
-      class="
-        px-24
-        py-32
-        border
-        rounded-2xl
-        border-secondary
-        shadow-secondary
-        space-y-16
-        text-left
-      "
+      class="px-24 py-32 border rounded-2xl border-secondary shadow-secondary space-y-16 text-left"
     >
       <h1 class="font-accent text-formal-accent text-2xl leading-28 font-bold">
         Your token is:
       </h1>
-      <p class="text-secondary text-base leading-18">
-        461gh8891g98d891h901j98jtye810ejtej0/1yj98je1j8et9y1jyt90199fn2ny198yj1954818119fg1bd189811gd811-hg91d991ffdg1
-      </p>
+      <p class="text-secondary text-base leading-18">@{{token}}</p>
     </div>
   </td>
 </tr>
