Add responsive and fix styles

--- a/src/components/header.html
+++ b/src/components/header.html
@@ -1,164 +1,53 @@
-<tr>
-  <td class="p-16">
-    <div class="flex flex-row items-center space-x-8">
+<table class="w-full mt-32 sm:mt-0">
+  <tr class="inline">
+    <td class="items-center align-middle py-16 pl-16">
       <a href="https://sealcred.xyz" class="no-underline">
-        <svg
+        <img
           width="56"
           height="56"
-          viewBox="0 0 56 56"
-          fill="none"
-          xmlns="http://www.w3.org/2000/svg"
-        >
-          <line
-            x1="51.5754"
-            y1="28.6765"
-            x2="54.3549"
-            y2="28.6765"
-            stroke="#FED823"
-            stroke-width="1.5"
-            stroke-linecap="round"
-          />
-          <line
-            x1="51.5757"
-            y1="25.8232"
-            x2="54.3551"
-            y2="25.8232"
-            stroke="#FED823"
-            stroke-width="1.5"
-            stroke-linecap="round"
-          />
-          <line
-            x1="1.64795"
-            y1="28.6765"
-            x2="4.42741"
-            y2="28.6765"
-            stroke="#FED823"
-            stroke-width="1.5"
-            stroke-linecap="round"
-          />
-          <line
-            x1="1.64795"
-            y1="25.8232"
-            x2="4.42741"
-            y2="25.8232"
-            stroke="#FED823"
-            stroke-width="1.5"
-            stroke-linecap="round"
-          />
-          <line
-            x1="35.0834"
-            y1="10.3541"
-            x2="35.9398"
-            y2="7.15833"
-            stroke="#FED823"
-            stroke-width="1.5"
-            stroke-linecap="round"
-          />
-          <line
-            x1="32.3283"
-            y1="9.61562"
-            x2="33.1846"
-            y2="6.41981"
-            stroke="#FED823"
-            stroke-width="1.5"
-            stroke-linecap="round"
-          />
-          <line
-            x1="23.093"
-            y1="49.5834"
-            x2="23.9493"
-            y2="46.3876"
-            stroke="#FED823"
-            stroke-width="1.5"
-            stroke-linecap="round"
-          />
-          <line
-            x1="20.3378"
-            y1="48.8449"
-            x2="21.1941"
-            y2="45.6491"
-            stroke="#FED823"
-            stroke-width="1.5"
-            stroke-linecap="round"
-          />
-          <path
-            d="M31.5669 23.6592C31.5669 21.5652 33.2186 19.8677 35.2561 19.8677C37.2936 19.8677 38.9453 21.5652 38.9453 23.6592C38.9453 25.7532 37.2936 23.6592 35.2561 23.6592C33.2186 23.6592 31.5669 25.7532 31.5669 23.6592Z"
-            stroke="#FF7BED"
-            stroke-width="1.5"
-            stroke-linecap="round"
-          />
-          <path
-            d="M28.0002 30.5663C29.3789 30.5663 30.4965 30.7316 30.4965 29.1502C30.4965 27.5688 29.3789 26.2868 28.0002 26.2868C26.6215 26.2868 25.5038 27.5688 25.5038 29.1502C25.5038 30.7316 26.6215 30.5663 28.0002 30.5663ZM28.0002 30.5663C28.0002 31.5173 28.0002 33.6333 28.0002 34.4892M28.0002 34.4892C28.0002 37.3422 31.5664 37.3421 31.5664 34.4892M28.0002 34.4892C28.0002 37.3421 24.434 37.3421 24.434 34.4892"
-            stroke="#FF7BED"
-            stroke-width="1.5"
-            stroke-linecap="round"
-          />
-          <path
-            d="M17.3052 23.6592C17.3052 21.5652 18.9569 19.8677 20.9944 19.8677C23.0319 19.8677 24.6836 21.5652 24.6836 23.6592C24.6836 25.7532 23.0319 23.6592 20.9944 23.6592C18.9569 23.6592 17.3052 25.7532 17.3052 23.6592Z"
-            stroke="#FF7BED"
-            stroke-width="1.5"
-            stroke-linecap="round"
-          />
-          <path
-            d="M39.4123 30.5664L35.1328 31.2796"
-            stroke="#FF7BED"
-            stroke-width="1.5"
-            stroke-linecap="round"
-          />
-          <path
-            d="M35.1346 33.4189L39.4141 34.1322"
-            stroke="#FF7BED"
-            stroke-width="1.5"
-            stroke-linecap="round"
-          />
-          <path
-            d="M16.5872 30.5664L20.8667 31.2796"
-            stroke="#FF7BED"
-            stroke-width="1.5"
-            stroke-linecap="round"
-          />
-          <path
-            d="M20.8674 33.4199L16.5879 34.1332"
-            stroke="#FF7BED"
-            stroke-width="1.5"
-            stroke-linecap="round"
-          />
-          <circle
-            cx="28.0012"
-            cy="28"
-            r="27.1033"
-            stroke="#FED823"
-            stroke-width="1.5"
-            stroke-linecap="round"
-          />
-          <path
-            d="M33.9171 50.0829C27.8985 51.6956 21.7971 50.7498 16.7676 47.9123C11.6053 44.9999 7.57231 40.0946 5.91706 33.9171C4.26181 27.7396 5.30184 21.475 8.31628 16.3716M22.0829 5.9171C28.2603 4.26185 34.525 5.30188 39.6284 8.31631C44.6005 11.2532 48.4702 16.0643 50.0829 22.0829C51.6955 28.1015 50.7498 34.2029 47.9123 39.2324"
-            stroke="#FED823"
-            stroke-width="1.5"
-            stroke-linecap="round"
-          />
-          <path
-            d="M45.5998 32.7151C44.3147 37.5113 41.2308 41.3453 37.2685 43.6858C33.2016 46.088 28.2093 46.9168 23.2864 45.5977C18.3636 44.2786 14.4544 41.0647 12.1335 36.9508M10.4038 23.2843C11.7228 18.3614 14.9368 14.4523 19.0506 12.1314C23.0587 9.87017 27.9209 9.1165 32.7172 10.4017C37.5134 11.6868 41.3474 14.7706 43.6879 18.7329"
-            stroke="#FED823"
-            stroke-width="1.5"
-            stroke-linecap="round"
-          />
-        </svg>
+          class="max-w-full align-middle [border:0]"
+          src="images/logo.webp"
+          alt="SealCred"
+        />
       </a>
-      <div
+    </td>
+    <td class="items-center align-middle py-16">
+      <span
         class="
-          flex flex-row
-          space-x-8
-          font-primary
-          text-lg
-          font-bold
+          font-primary font-bold
           leading-24
+          text-lg text-accent
+          align-middle
+          ml-8
         "
       >
-        <h1 class="text-accent">SealCred</h1>
-        <p class="text-secondary">|</p>
-        <h2 class="text-secondary">work</h2>
-      </div>
-    </div>
-  </td>
-</tr>
+        SealCred
+      </span>
+    </td>
+    <td class="items-center align-middle py-16">
+      <span
+        class="
+          font-primary font-bold
+          leading-24
+          text-lg text-secondary
+          align-middle
+          mx-8
+        "
+      >
+        |
+      </span>
+    </td>
+    <td class="items-center align-middle py-16 pr-16">
+      <span
+        class="
+          font-primary font-bold
+          leading-24
+          text-lg text-secondary
+          align-middle
+        "
+      >
+        work
+      </span>
+    </td>
+  </tr>
+</table>
