--- a/src/components/secret.html
+++ b/src/components/secret.html
@@ -1,12 +1,48 @@
-<tr>
-  <td class="p-16">
-    <div
-      class="px-24 py-32 border rounded-2xl border-secondary shadow-secondary space-y-16 text-left"
-    >
+<table
+  class="
+    w-full
+    mt-32
+    text-left
+    block
+    border-0
+    rounded-2xl
+    bg-primary-dark
+    secondarySecret
+  "
+  style="mso-border-width-alt: 1px"
+>
+  <tr
+    class="
+      w-full
+      px-24
+      pt-32
+      block
+      border-t border-l border-r
+      rounded-tl-2xl rounded-tr-2xl
+      border-secondary
+    "
+  >
+    <td>
       <h1 class="font-accent text-formal-accent text-2xl leading-28 font-bold">
         Your token is:
       </h1>
-      <p class="text-secondary text-base leading-18">@{{token}}</p>
-    </div>
-  </td>
-</tr>
+    </td>
+  </tr>
+  <tr
+    class="
+      w-full
+      px-24
+      pb-32
+      block
+      border-b border-l border-r
+      rounded-bl-2xl rounded-br-2xl
+      border-secondary
+    "
+  >
+    <td>
+      <p class="text-secondary text-base leading-18 break-all pt-16">
+        @{{token}}
+      </p>
+    </td>
+  </tr>
+</table>
