--- a/src/css/custom/main.css
+++ b/src/css/custom/main.css
@@ -6,12 +6,27 @@ body {
   margin: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #0d0030;
   background: conic-gradient(
       from 90deg at 0.06rem 0.06rem,
       #0d0030 90deg,
       #1a0259 0
     )
     0 0/3rem 3rem;
+}
+
+.grid {
+  background-color: #0d0030;
+  background: conic-gradient(
+      from 90deg at 0.06rem 0.06rem,
+      #0d0030 90deg,
+      #1a0259 0
+    )
+    0 0/3rem 3rem;
+}
+
+.secondarySecret {
+  @apply shadow-secondary;
 }
 
 input,
