--- a/src/templates/token.html
+++ b/src/templates/token.html
@@ -6,16 +6,15 @@ htmlClass: h-full
 
 <extends src="src/layouts/main.html">
   <block name="template">
-    <table class="w-full h-full font-sans">
-      <tr>
-        <td align="center" class="align-middle py-24">
-          <table class="max-w-700 sm:w-full">
+    <table class="w-full h-full font-sans bg-primary-dark">
+      <tr class="grid">
+        <td align="center" class="align-middle py-24 px-32 sm:px-16">
+          <table class="w-full h-full">
             <tr>
-              <td align="center" class="sm:px-24">
-                <table class="sm:w-full">
+              <td align="center" class="sm:px-24 px-16 pb-56">
+                <table class="max-w-700 sm:w-full">
                   <component src="/src/components/header.html"></component>
                   <component src="/src/components/secret.html"></component>
-                  <component src="/src/components/footer.html"></component>
                 </table>
               </td>
             </tr>
