Small fixes and add link to logo

--- a/src/components/header.html
+++ b/src/components/header.html
@@ -5,8 +5,8 @@
         <img
           width="56"
           height="56"
-          class="max-w-full align-middle [border:0]"
-          src="images/logo.webp"
+          class="max-w-full align-middle block border-0 rounded-full"
+          src="https://sealcred.xyz/img/logo_dark.jpg"
           alt="SealCred"
         />
       </a>
