--- a/src/components/secret.html
+++ b/src/components/secret.html
@@ -41,7 +41,7 @@
   >
     <td>
       <p class="text-secondary text-base leading-18 break-all pt-16">
-        @{{secret}}
+        @{{token}}
       </p>
     </td>
   </tr>
